# cicada

./: .gitignore  Cargo.toml  runfile.toml
action/: build.ts  run.ts
client/rs/: Cargo.toml  README.md
client/rs/src/: lib.rs  openapi.rs  request.rs
client/rs/src/api/: auth.rs  mod.rs
client/rs/src/api/read/: api_key.rs  checkpoint.rs  device.rs  encryption_key.rs  filesystem.rs  group.rs  mod.rs  node.rs  onboarding_key.rs  policy.rs  search.rs  secret.rs  user.rs
client/rs/src/api/write/: api_key.rs  checkpoint.rs  device.rs  encryption_key.rs  filesystem.rs  mod.rs  node.rs  onboarding_key.rs  policy.rs  secret.rs  user.rs
client/rs/src/entities/: api_key.rs  checkpoint.rs  device.rs  encryption_key.rs  external_login.rs  filesystem.rs  group.rs  logger.rs  master_key.rs  mod.rs  node.rs  onboarding_key.rs  policy.rs  record_id.rs  secret.rs  user.rs
client/rs/src/entities/config/: core.rs  logger.rs  mod.rs  periphery.rs
client/ts/: generate_types.mjs  package-lock.json  package.json
client/ts/src/: lib.ts  responses.ts  types.ts
compose/: apparmor-docker-cicada  core.compose.yaml  periphery.compose.yaml
config/: core.config.toml  periphery.config.toml
docsite/: docusaurus.config.ts  package.json  runfile.toml
docsite/src/pages/: index.tsx
frontend/: components.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: globals.css  main.tsx
frontend/src/lib/: hooks.ts
frontend/src/ui/: sonner.tsx  theme.tsx
lib/config/: Cargo.toml
lib/environment_file/: Cargo.toml
lib/loader/: Cargo.toml  README.md
lib/loader/src/: config.rs  lib.rs
lib/logger/: Cargo.toml
lib/logger/src/: lib.rs  otel.rs
ui/: Dockerfile  index.html  package.json  runfile.toml  vite.config.ts
ui/public/: manifest.json
ui/src/: index.scss  main.tsx  router.tsx  theme.ts  theme.tsx
ui/src/app/: index.tsx  sidebar.tsx
ui/src/app/topbar/: index.tsx  user-dropdown.tsx
ui/src/app/topbar/omni-search/: hooks.tsx
ui/src/components/: api-key-table.tsx  checkpoint-link.tsx  checkpoint-selector.tsx  checkpoint-table.tsx  checkpointing-mode-selector.tsx  checkpoints.tsx  confirm-button.tsx  confirm-delete.tsx  confirm-file-save.tsx  confirm-save.tsx  confirm-secret-save.tsx  copy-button.tsx  data-table.tsx  device-multi-selector.tsx  edit-secret-modal.tsx  enable-switch.tsx  encryption-key-selector.tsx  filesystem-multi-selector.tsx  filesystem-selector.tsx  filesystem-tree.tsx  group-multi-selector.tsx  initialize-encryption-key.tsx  initialize-key.tsx  interpolation-mode-selector.tsx  monaco.tsx  node-link.tsx  resource-link.tsx  tabbed-page.tsx  user-multi-selector.tsx
ui/src/create/: api-key.tsx  encryption-key.tsx  filesystem.tsx  node.tsx  onboarding-key.tsx  policy.tsx  secret.tsx  user.tsx
ui/src/layout/: index.tsx  page.tsx  sidebar.tsx  tabbed-page.tsx  topbar.tsx
ui/src/layout/topbar/: index.tsx  theme-toggle.tsx  user-dropdown.tsx
ui/src/lib/: hooks.ts  icons.ts  utils.ts
ui/src/monaco/: index.ts  init.ts  theme.ts
ui/src/pages/: checkpoint.tsx  device.tsx  devices.tsx  encryption-key.tsx  encryption-keys.tsx  file.tsx  filesystem.tsx  filesystems.tsx  home.tsx  login.tsx  onboarding-key.tsx  onboarding-keys.tsx  onboarding.tsx  profile.tsx  secret.tsx  secrets.tsx  user-disabled.tsx
ui/src/pages/access/: devices.tsx  index.tsx  onboarding-keys.tsx  policies.tsx  users.tsx
ui/src/pages/device/: index.tsx
ui/src/pages/devices/: devices.tsx  index.tsx  onboarding-keys.tsx
ui/src/pages/encryption-key/: index.tsx
ui/src/pages/node/: file.tsx  folder.tsx  index.tsx  title.tsx
ui/src/pages/onboarding-key/: index.tsx
ui/src/pages/profile/: index.tsx  linked-logins.tsx  passkey.tsx  totp.tsx
