[workspace]
resolver = "2"
members = [
	"bin/*",
	"client/rs",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["mbecker20 <becker.maxh@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/moghtech/cicada"
homepage = "https://mogh.tech/cicada"

[profile.release]
strip = "debuginfo"

[patch.crates-io]
mogh_auth_client = { path = "../lib/auth/client/rs" }
mogh_auth_server = { path = "../lib/auth/server" }
mogh_error = { path = "../lib/crates/error" }
mogh_secret_file = { path = "../lib/crates/secret_file" }
mogh_config = { path = "../lib/crates/config" }
mogh_encryption = { path = "../lib/crates/encryption" }
mogh_logger = { path = "../lib/crates/logger" }
mogh_pki = { path = "../lib/crates/pki" }
mogh_server = { path = "../lib/crates/server" }
mogh_rate_limit = { path = "../lib/crates/rate_limit" }

[workspace.dependencies]
cicada_client = { path = "client/rs" }

# MOGH
mogh_error = { version = "1.0.3", default-features = false }
mogh_auth_client = "1.2.1"
mogh_auth_server = "1.2.5"
mogh_secret_file = "1.0.0"
mogh_config = "1.0.1"
mogh_encryption = "0.1.0"
mogh_logger = "1.3.0"
mogh_pki = "1.1.0"
mogh_resolver = "1.0.0"
mogh_rate_limit = "1.0.0"
mogh_server = "1.4.1"
async_timing_util = "1.1.0"

# ASYNC
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3.31"

# SERVER
axum = { version = "0.8.8", features = ["ws", "json", "macros"] }
http = "1.4.0"

# OPENAPI
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa = "5.4.0"

# SER/DE
serde = { version = "1.0.227", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
serde_json = "1.0.149"

# LOGGING
tracing = "0.1.44"

# CONFIG
dotenvy = "0.15.7"
envy = "0.4.2"

# CRYPTO / AUTH
rustls = { version = "0.23.36", features = ["aws-lc-rs"] }

# ERROR
anyhow = "1.0.100"

# DATABASE
surrealdb = { version = "3.0.0-beta.2", features = ["native-tls", "kv-rocksdb"] }
surrealdb-types = { version = "3.0.0-beta.2" }

# MISC
typeshare = "1.0.5"
colored = "3.1.1"
dashmap = "6.1.0"
fuser = "0.16.0"
libc = "0.2.180"
rand = "0.9.2"