[workspace]
resolver = "2"
members = [
	"bin/*",
	"client/rs",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["mbecker20 <becker.maxh@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/moghtech/cicada"
homepage = "https://mogh.tech/cicada"

[profile.release]
strip = "debuginfo"

[workspace.dependencies]
cicada_client = { path = "client/rs" }

# MOGH
mogh_error = { version = "1.0.4", default-features = false }
mogh_auth_client = "1.2.2"
mogh_auth_server = "1.2.13"
mogh_secret_file = "1.0.1"
mogh_config = "1.0.5"
mogh_encryption = "0.1.1"
mogh_logger = "1.3.3"
mogh_pki = "1.1.3"
mogh_resolver = "1.0.0"
mogh_rate_limit = "1.0.1"
mogh_server = "1.4.5"
async_timing_util = "1.1.0"

# ASYNC
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.50.0", features = ["full"] }
futures-util = "0.3.32"

# SERVER
axum = { version = "0.8.8", features = ["ws", "json", "macros"] }
http = "1.4.0"

# OPENAPI
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa = "5.4.0"

# SER/DE
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
serde_json = "1.0.149"

# LOGGING
tracing = "0.1.44"

# CONFIG
dotenvy = "0.15.7"
envy = "0.4.2"

# CRYPTO / AUTH
rustls = { version = "0.23.37", features = ["aws-lc-rs"] }

# ERROR
anyhow = "1.0.102"

# DATABASE
surrealdb = { version = "3.0.5", features = ["native-tls", "kv-rocksdb", "kv-tikv"] }
surrealdb-types = { version = "3.0.5" }

# MISC
typeshare = "1.0.5"
colored = "3.1.1"
dashmap = "6.1.0"
fuser = "0.17.0"
regex = "1.12.3"
libc = "0.2.184"
rand = "0.10.0"