[package]
name = "cicada_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
# default = ["blocking"] # use to dev client blocking mode
blocking = ["reqwest/blocking"]
logger = ["dep:logger"]
utoipa = ["dep:utoipa"]
core = ["logger", "utoipa", "dep:mogh_server"]

[dependencies]
# MOGH
mogh_error = { workspace = true, features = ["axum"] }
mogh_server = { workspace = true, optional = true }
logger = { workspace = true, optional = true }
derive_empty_traits.workspace = true
resolver_api.workspace = true
# EXTERNAL
utoipa = { workspace = true, optional = true }
surrealdb-types.workspace = true
serde_json.workspace = true
typeshare.workspace = true
reqwest.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true