[package]
name = "cicada_client"
description = "Client for the Cicada configuration system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
# default = ["blocking"] # use to dev client blocking mode
blocking = ["reqwest/blocking", "mogh_auth_client/blocking"]
logger = ["dep:mogh_logger"]
utoipa = ["dep:utoipa", "mogh_auth_client/utoipa", "mogh_error/utoipa"]
core = ["logger", "utoipa", "dep:mogh_server"]
periphery = ["blocking", "logger"]

[dependencies]
# MOGH
mogh_error = { workspace = true, features = ["axum"] }
mogh_server = { workspace = true, optional = true }
mogh_logger = { workspace = true, optional = true }
async_timing_util.workspace = true
mogh_auth_client.workspace = true
mogh_resolver.workspace = true
mogh_pki.workspace = true
# EXTERNAL
utoipa = { workspace = true, optional = true }
surrealdb-types.workspace = true
serde_json.workspace = true
typeshare.workspace = true
reqwest.workspace = true
tracing.workspace = true
serde.workspace = true
strum.workspace = true
http.workspace = true